alignment fixes

--- a/app-tenzies/src/App.css
+++ b/app-tenzies/src/App.css
@@ -2,7 +2,7 @@
   background-color: #2b283A;
   height: 500px;
   width: 450px;
-  margin: 30px auto;
+  margin: 80px auto;
   padding: 20px;
 }
 
